# manifoldy

./: .gitignore  Makefile  README.md  pylintrc  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml  python-publish-pypi.yml  python-publish.yml
manifoldy/: Curvature.py  L2NormCurvature.py  __init__.py  definitions.py  generators.py  reduction_algorithms.py  utils.py
manifoldy/results/: dataset_names.pickle  projection_dataset_names.pickle  results.csv
manifoldy/test/: L2NormCurvature_before_refactor.py  generators_before_refactor.py  refactoring_integration_test.py
